Add common fetch error handling function. Fixes #31

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="styles/main.css" rel="stylesheet">
         <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
         <script src="javascript/main.js"></script>
+        <script src="javascript/utils.js"></script>
     </head>
     <body>
         <div id="container">
