--- a/settings.html
+++ b/settings.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="styles/main.css" rel="stylesheet">
         <script src="javascript/main.js"></script>
+        <script src="javascript/utils.js"></script>
     </head>
 
     <body>
