--- a/testing/index.html
+++ b/testing/index.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="protobuf.js"></script>
         <script type="text/javascript" src="mta-arrivals.js"></script>
         <script type="text/javascript" src="api-key.js"></script>
-        <script type="text/javascript" src="/javascript/utils.js"></script>
+        <script type="text/javascript" src="../javascript/utils.js"></script>
         <script>
             "use strict"
             function updateArrivals(gtfsStopId) {    
