--- a/testing/index.html
+++ b/testing/index.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script type="text/javascript" src="protobuf.js"></script>
         <script type="text/javascript" src="mta-arrivals.js"></script>
-        <script type="text/javascript" src="api-key.js"></script>
         <script type="text/javascript" src="../javascript/utils.js"></script>
         <script>
             "use strict"
@@ -21,7 +20,7 @@
                             html += arrivals[direction].label
                             arrivals[direction].trains.forEach(arrival => { 
                                 html += '<div class="train">'
-                                html += `<p class="line ${arrival.line.toLowerCase()}">${arrival.line}</p>`
+                                html += `<p class="line _${arrival.line.toLowerCase()}">${arrival.line}</p>`
                                 html += `<p class="destination">${arrival.destination}</p>`
                                     if (arrival.seconds <= 30) {
                                         html += '<p class="time arriving">ARRIVING</p>'
@@ -47,7 +46,7 @@
             }
 
             ready( () => {
-                const STATION_ID = "D25" // D25 should be 7AV & Flatbush in BK
+                const STATION_ID = localStorage.getItem("subwayStation")
                 // Get station information and load display
                 initMtaArrivals()
                     .then(x => {
@@ -121,57 +120,57 @@
                 font-weight: bold;
             }
 
-            .a, .c, .e {
+            ._a, ._c, ._e {
                 background-color: #0039A6;
                 color: #ffffff;
             }
             
-            .b, .d, .f, .m {
+            ._b, ._d, ._f, ._m {
                 background-color: #FF6319;
                 color: #ffffff;
             }
 
-            .g {
+            ._g {
                 background-color: #6CBE45;
                 color: #ffffff;
             }
 
-            .j, .z {
+            ._j, ._z {
                 background-color: #996633;
                 color: #ffffff;
             }
 
-            .l {
+            ._l {
                 background-color: #A7A9AC;
                 color: #ffffff;
             }
 
-            .n, .q, .r, .w {
+            ._n, ._q, ._r, ._w {
                 background-color: #FCCC0A;
                 color: black;
             }
 
-            .s {
+            ._s {
                 background-color: #808183;
                 color: #ffffff;
             }
 
-            .\30 1, .\30 2, .\30 3 {
+            ._1, ._2, ._3 {
                 background-color: #EE352E;
                 color: #ffffff;
             }
 
-            .\30 4, .\30 5, .\30 6 {
+            ._4, ._5, ._6, ._6 {
                 background-color: #00933C;
                 color: #ffffff;
             }
 
-            .\30 7 {
+            ._7 {
                 background-color: #B933AD;
                 color: #ffffff;
             }
 
-            .sir {
+            ._sir {
                 font-size: 0.65rem;
                 background-color: #0078C6;
                 color: #ffffff;
@@ -187,5 +186,6 @@
         <div id="arrivals">
 
         </div>
+        <a href="../settings.html">settings</a>
     </body>
 </html>
