Fix twin list picker buttons. Fixes #45

--- a/settings.html
+++ b/settings.html
@@ -31,6 +31,7 @@
                 <input id="lon" type="text">
                 <div id="station-radio-group">
                 </div>
+            </form>
         
 
                 <h2>Citibike</h2>
@@ -60,6 +61,7 @@
                 <p class="body-text">You'll need an <a href="https://api.mta.info/#/signup">MTA API key</a> to use this.</p>
            
                 <label for="subway-api-key">MTA Developer API Key</label>
+                <form>
                 <input type="text" id="subway-api-key" value=""></input>
 
                 <label for="subway-boroughs">Borough</label>
