Comment out Staten Island. Relates to #41

--- a/settings.html
+++ b/settings.html
@@ -72,7 +72,7 @@
                     <option value="Bx">Bronx</option>
                     <option value="M">Manhattan</option>
                     <option value="Q">Queens</option>
-                    <option value="SI">Staten Island</option>
+                    <!-- <option value="SI">Staten Island</option> -->
                 </select>
 
                 <label for="subway-lines">Line</label>
