Cleaned up a couple functions in the settings form code. #28

--- a/settings.html
+++ b/settings.html
@@ -47,8 +47,8 @@
                             </select>
                         </div>
                         <div class="vertical-buttons">
-                            <button onclick="addStations()">&gt;</button>
-                            <button onclick="removeStations()">&lt;</button>
+                            <button onclick="moveBikeStations('station-list','selected-stations')">&gt;</button>
+                            <button onclick="moveBikeStations('selected-stations','station-list')">&lt;</button>
                         </div>
                         <div>
                             <select id="selected-stations" multiple>
