Combined a couple functions in the settings form code. #28

--- a/settings.html
+++ b/settings.html
@@ -84,7 +84,7 @@
         
             
                 <input class="secondary" type="button" value="Cancel" onclick="window.location = 'index.html'">
-                <input class="primary" type="button" value="Save" onclick="saveLatLon()">
+                <input class="primary" type="button" value="Save" onclick="saveForm()">
             </form>
 
             <div>
