Added re-sorting to the twin list picker. Moved a couple utility functions to utils.js.

--- a/settings.html
+++ b/settings.html
@@ -47,8 +47,8 @@
                             </select>
                         </div>
                         <div class="vertical-buttons">
-                            <button onclick="moveBikeStations('station-list','selected-stations')">&gt;</button>
-                            <button onclick="moveBikeStations('selected-stations','station-list')">&lt;</button>
+                            <button onclick="moveBikeStations('station-list','selected-stations', false, false)">&gt;</button>
+                            <button onclick="moveBikeStations('selected-stations','station-list', true, true)">&lt;</button>
                         </div>
                         <div>
                             <select id="selected-stations" multiple>
